@@ -28,6 +28,10 @@
  * @version     2.2.3
  * @date        November 16, 2013
  * Made "Page Permalink" link conditionally display with default as false.
+ *
+ * @version     2.2.4
+ * @date        April 13, 2014
+ * Added `dmm_post_meta_link_edit()` function with filter hooks for DRY purposes
  */
 
 /** Set count variable for author 'mullet' loop */
@@ -71,8 +75,7 @@ $count ++; ?>
 					comments_popup_link( '', '', '', '', __( 'with Comments closed', 'desk-mess-mirrored' ) );
 				}
 				/** End if - not post password required */
-				the_shortlink( __( '&#8734;', 'desk-mess-mirrored' ), '', ' | ', '' );
-				edit_post_link( __( 'Edit', 'desk-mess-mirrored' ), __( ' | ', 'desk-mess-mirrored' ), __( '', 'desk-mess-mirrored' ) ); ?>
+				dmm_post_meta_link_edit(); ?>
 			</div><!-- .postdata -->
 		<?php
 		}
