@@ -3,6 +3,7 @@ Changelog: April 13, 2014
 
 == Version 2.2.4 ==
 = Code =
+* Added `dmm_post_meta_link_edit()` function with filter hooks for DRY purposes
 * Removed call to `function_exists( 'dynamic_sidebar' )` as required WordPress version precludes its necessity
 
 = CSS =
